feat(lib): shows relatime time difference between modifications

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Pranshu Chittora <pranshuchittora17@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.2",
     "glob": "^7.1.4",
+    "moment": "^2.24.0",
     "readdirp": "^3.0.2"
   },
   "scripts": {
