--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chalk": "^3.0.0",
     "fs": "^0.0.1-security",
     "moment": "^2.24.0",
+    "prompts": "^2.3.0",
     "rimraf": "^3.0.0"
   },
   "scripts": {
