--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
     "rootDir": "src",
-
     // "allowSyntheticDefaultImports": true,
+    "types": ["jest"],
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
@@ -12,9 +11,7 @@
     "strict": false,
     "lib": ["es6", "es2017"],
     "resolveJsonModule": true,
-    "sourceMap": true,
     "declaration": true
   },
-
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/lib/tests"]
 }
