tests: fixes flaky tests
- Wrote tests for removing files func
- Setups test pipeline (basic)

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,5 +13,5 @@
     "resolveJsonModule": true,
     "declaration": true
   },
-  "exclude": ["node_modules", "dist", "src/lib/tests"]
+  "exclude": ["node_modules", "dist", "src/lib/tests", "build"]
 }
