docs: updates docs
- New demo.gif
- Updates repo info in pjson

--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Liberating disk space from node_modules",
   "author": "Pranshu Chittora <pranshuchittora17@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/pranshuchittora/autarky",
+  "homepage": "https://github.com/pranshuchittora/autarky#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pranshuchittora/autarky.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pranshuchittora/autarky/issues"
+  },
   "bin": {
     "autarky": "build/index.js"
   },
