fix: package.json scripts
- Removes test from the prepublish script becaue it runs twice

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "watch": "tsc -p tsconfig.dev.json --watch",
     "build": "tsc -p tsconfig.prod.json",
     "test": "jest",
-    "prepublish": "yarn run test && yarn run build"
+    "prepublish": "yarn run build"
   },
   "files": [
     "build/**/*"
