--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "g-factor": "^1.0.0",
     "inquirer": "^7.0.0",
     "moment": "^2.24.0",
-    "prompts": "^2.3.0",
     "redux": "^4.0.4",
     "rimraf": "^3.0.0"
   },
@@ -38,6 +37,7 @@
   ],
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.23",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.12.8",
