test: added test for the redux
- Tests for Reducers
- Tests for action types

fix: typo fix

fix: removed the interface for the redux store object

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "watch": "tsc -p tsconfig.dev.json --watch",
     "build": "tsc -p tsconfig.prod.json",
     "test": "jest",
+    "test-watch": "jest --watchAll",
     "prepublish": "yarn run build"
   },
   "files": [
