--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autarky",
-  "version": "2.0.0",
+  "version": "2.0.0-alpha.1",
   "description": "Liberating disk space from node_modules",
   "author": "Pranshu Chittora <pranshuchittora17@gmail.com>",
   "license": "MIT",
