--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,16 +2,18 @@
   "compilerOptions": {
     "rootDir": "src",
     // "allowSyntheticDefaultImports": true,
-    "types": ["jest"],
+    "types": ["jest","react"],
     "esModuleInterop": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "target": "es5",
+    "target": "es6",
     "strict": false,
     "lib": ["es6", "es2017"],
     "resolveJsonModule": true,
-    "declaration": true
+    "declaration": true,
+    "jsx": "react",
+    "sourceMap": true
   },
   "exclude": ["node_modules", "dist", "src/lib/tests", "build"]
 }
