--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autarky",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
   "description": "Liberating disk space from node_modules",
   "author": "Pranshu Chittora <pranshuchittora17@gmail.com>",
   "license": "MIT",
@@ -33,11 +33,9 @@
     "ink-spinner": "^4.0.1",
     "ink-table": "^3.0.0",
     "ink-text-input": "^4.0.1",
-    "inquirer": "^7.0.0",
     "log-symbols": "^4.0.0",
     "moment": "^2.24.0",
     "react": "^17.0.1",
-    "react-redux": "^7.2.2",
     "redux": "^4.0.4",
     "rimraf": "^3.0.0",
     "yn": "^4.0.0"
@@ -48,8 +46,7 @@
     "format": "prettier --write 'src/**/*.*'",
     "test": "jest",
     "test-watch": "jest --watchAll",
-    "prepublish": "yarn run build",
-    "redux-devtools": "redux-devtools --hostname=localhost --port=8000"
+    "prepublish": "yarn run build"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
@@ -61,7 +58,6 @@
     "@types/rimraf": "^2.0.3",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "redux-devtools-cli": "^1.0.0-4",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   },
