--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "sourceMap": true,
+    "outDir": "dist",
     "target": "es6",
     "esModuleInterop": true,
-    "noEmit": true
+    // "noEmit": true
   }
 }
