chore[tooling]: TS + webpack module alias @app (#89)
* tooling: Webpack + TS Alias setup

* feat: Fixed edge cases

* chore: Module resolution alias

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,18 +2,23 @@
   "compilerOptions": {
     "rootDir": "src",
     // "allowSyntheticDefaultImports": true,
-    "types": ["jest","react"],
+    
+    "types": ["jest", "react"],
     "esModuleInterop": true,
-    "module": "commonjs",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "target": "es6",
     "strict": false,
     "lib": ["es6", "es2017"],
     "resolveJsonModule": true,
-    "declaration": true,
+    // "declaration": true,
     "jsx": "react",
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@app/*": ["src/*"]
+    }
   },
-  "exclude": ["node_modules", "dist", "src/lib/tests", "build"]
+
+  "include": ["src"]
 }
