--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/redux": "^3.6.0",
     "@types/rimraf": "^2.0.3",
-    "jest": "^26.6.3",
+    "jest": "29.1.2",
     "prettier": "^1.19.1",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.12",
