--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@types/rimraf": "^2.0.3",
     "jest": "29.1.2",
     "prettier": "^1.19.1",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "29.0.3",
     "ts-loader": "^8.0.12",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.2",
