--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   "dependencies": {
     "chalk": "5.0.1",
     "fs": "^0.0.1-security",
-    "g-factor": "^1.1.0",
-    "ink": "^3.0.8",
-    "ink-big-text": "^1.2.0",
-    "ink-gradient": "^2.0.0",
-    "ink-multi-select": "^2.0.0",
-    "ink-spinner": "^4.0.1",
-    "ink-table": "^3.0.0",
-    "ink-text-input": "^4.0.1",
-    "log-symbols": "^4.0.0",
-    "moment": "^2.24.0",
-    "react": "^17.0.1",
-    "redux": "^4.2.0",
-    "rimraf": "^3.0.0",
+    "g-factor": "1.1.0",
+    "ink": "3.0.8",
+    "ink-big-text": "1.2.0",
+    "ink-gradient": "2.0.0",
+    "ink-multi-select": "2.0.0",
+    "ink-spinner": "4.0.1",
+    "ink-table": "3.0.0",
+    "ink-text-input": "4.0.1",
+    "log-symbols": "4.0.0",
+    "moment": "2.24.0",
+    "react": "17.0.1",
+    "redux": "4.2.0",
+    "rimraf": "3.0.0",
     "yn": "5.0.0"
   },
   "scripts": {
@@ -45,24 +45,24 @@
     "watch:test": "jest --watchAll"
   },
   "devDependencies": {
-    "@types/chalk": "^2.2.0",
-    "@types/inquirer": "^6.5.0",
-    "@types/jest": "^26.0.18",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^14.14.13",
-    "@types/react": "^17.0.0",
-    "@types/react-redux": "^7.1.11",
-    "@types/redux": "^3.6.0",
-    "@types/rimraf": "^2.0.3",
+    "@types/chalk": "2.2.0",
+    "@types/inquirer": "6.5.0",
+    "@types/jest": "26.0.18",
+    "@types/moment": "2.13.0",
+    "@types/node": "14.14.13",
+    "@types/react": "17.0.0",
+    "@types/react-redux": "7.1.11",
+    "@types/redux": "3.6.0",
+    "@types/rimraf": "2.0.3",
     "jest": "29.1.2",
-    "prettier": "^1.19.1",
+    "prettier": "1.19.1",
     "ts-jest": "29.0.3",
-    "ts-loader": "^8.0.12",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.1.2",
-    "webpack": "^5.10.1",
-    "webpack-cli": "^4.2.0",
-    "webpack-node-externals": "^2.5.2"
+    "ts-loader": "8.0.12",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
+    "typescript": "4.1.2",
+    "webpack": "5.10.1",
+    "webpack-cli": "4.2.0",
+    "webpack-node-externals": "2.5.2"
   },
   "files": [
     "build",
